--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pierre-Olivier Bouteau"
+            android:text=""
             android:id="@+id/nameTextView"
             android:textSize="14sp"
             android:textColor="#FFFFFF"
