--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".NavigationDrawerFragment">
 
     <RelativeLayout
@@ -11,7 +12,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/relativeLayout"
-        android:background="#ff303030">
+        android:background="#ff0070b8">
 
         <TextView
             android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
             android:text=""
             android:id="@+id/nameTextView"
             android:textSize="14sp"
-            android:textColor="#FFFFFF"
+            android:textColor="#ffffff"
             android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
@@ -30,13 +31,36 @@
     <ListView
         android:id="@+id/navigationDrawerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="150dp"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:background="#ffffffff"
         android:layout_below="@+id/relativeLayout" />
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:id="@+id/separator"
+        android:background="#ffcfcfcf"
+        android:layout_below="@+id/navigationDrawerList"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:id="@+id/settingsTextView"
+        android:textSize="14sp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:paddingTop="16dp"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_below="@+id/separator"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
