--- a/app/src/main/res/layout/fragment_mistery.xml
+++ b/app/src/main/res/layout/fragment_mistery.xml
@@ -73,7 +73,7 @@
             android:textSize="30sp"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            android:id="@+id/textView2"
+            android:id="@+id/info_text"
             android:layout_alignBottom="@+id/imageView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
