--- a/app/src/main/res/layout/fragment_mistery.xml
+++ b/app/src/main/res/layout/fragment_mistery.xml
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:id="@+id/imageView"
-            android:src="@drawable/image"
+            android:src="@drawable/paris"
             android:scaleType="centerCrop" />
 
         <RelativeLayout
