--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -38,7 +38,7 @@
         android:background="#ffffffff"
         android:layout_below="@+id/relativeLayout" />
 
-    <View
+    <!--<View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/separator"
@@ -61,6 +61,6 @@
         android:paddingRight="16dp"
         android:layout_below="@+id/separator"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true" />-->
 
 </RelativeLayout>
