--- a/app/src/main/res/layout/fragment_mistery.xml
+++ b/app/src/main/res/layout/fragment_mistery.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="mistery sub title"
+                android:text="@string/m_subtitle"
                 android:textColor="@android:color/white"
                 android:id="@+id/textView3"
                 android:layout_alignParentTop="true"
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:text="mistery description blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blablablabla blabla"
+            android:text="@string/m_text"
             android:textColor="@android:color/black"
             android:id="@+id/textView"
             android:layout_below="@+id/separator"
@@ -69,7 +69,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mistery"
+            android:text="@string/m_title"
             android:textSize="30sp"
             android:textColor="@android:color/white"
             android:textStyle="bold"
