--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -11,7 +11,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
         android:layout_marginTop="20dp"
-        android:text="Heading: 0.0" />
+        android:text="blabla" />
 
     <ImageView
         android:id="@+id/imageViewCompass"
@@ -19,6 +19,7 @@
         android:layout_height="fill_parent"
         android:layout_below="@+id/tvHeading"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/compass" />
+        android:src="@drawable/compass"
+        android:layout_margin="32dp" />
 
 </RelativeLayout>
