--- a/app/src/main/res/layout/fragment_mistery.xml
+++ b/app/src/main/res/layout/fragment_mistery.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="fill_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="SOLVE"
             android:textColor="@android:color/holo_orange_dark"
-            android:id="@+id/exploreButton"
+            android:id="@+id/solveButton"
             style="?android:attr/borderlessButtonStyle"
             android:layout_below="@+id/relativeLayout"
             android:layout_alignParentRight="true"
@@ -51,7 +51,7 @@
             android:layout_height="1dp"
             android:background="#ffcfcfcf"
             android:id="@+id/separator"
-            android:layout_alignBottom="@+id/exploreButton"
+            android:layout_alignBottom="@+id/solveButton"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -78,5 +78,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:padding="16dp" />
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/m_hint_1"
+                android:id="@+id/hint1_textview"
+                android:layout_below="@+id/textView"
+                android:padding="16dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/m_hint_2"
+                android:id="@+id/hint2_textview"
+                android:layout_below="@+id/hint1_textview"
+                android:padding="16dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/m_hint_3"
+                android:id="@+id/hint3_textview"
+                android:layout_below="@+id/hint2_textview"
+                android:padding="16dp"/>
     </RelativeLayout>
 </ScrollView>
